--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Right Div for Image -->
     <div class="image-div">
-        <img src="images\face2.PNG" alt="Responsive Image">
+        <img src="images\self.PNG" alt="Responsive Image">
     </div>
     </div>
     
