button and image
added a responsive button then adding padding to the image

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <p>Hi, I am </p>
         <h2>ESETHU GAGASI</h2>
         <p>Web Developer in South Africa</p>
+        <button class="expand-button" onclick="expandText()">Contact Us</button>
     </div>
 
     <!-- Right Div for Image -->
@@ -50,6 +51,15 @@
         <img src="images\self.PNG" alt="Responsive Image">
     </div>
     </div>
+
+    <!-- <script>
+        function expandText() {
+            var textDiv = document.querySelector('.text-div');
+            textDiv.style.height = 'auto';
+            textDiv.style.overflow = 'visible';
+            document.querySelector('.expand-button').style.display = 'none';
+        }
+    </script> -->
     
 </body>
 </html>
